# pydiff

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pydiff.py  setup.cfg  tox.ini
conf/: Makefile.conf  constraints.txt  dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt
tests/: Makefile  expected-xls.diff  expected-xlsx.diff  test-modified.xls  test-modified.xlsx  test-original.xls  test-original.xlsx
xldiff/: __init__.py  __main__.py  cli.py  diff.py  main.py  source.py
