[metadata]
name = pyxldiff
version = attr: xldiff.__version__
description = A 'diff' utility for Excel spreadsheets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zondo/pyxldiff

author = Glenn Hutchings
author_email = zondo42@gmail.com
license = MIT
copyright = 2021, Glenn Hutchings

classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = false

install_requires =
    xlrd
    openpyxl
    docopt

[options.entry_points]
console_scripts =
    xldiff = xldiff.cli:main

[aliases]
wheel = bdist_wheel

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[flake8]
exclude =
    xldiff/__init__.py

ignore = E731, W504

[mypy]
disallow_untyped_calls = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

warn_unreachable = true
warn_return_any = true

ignore_missing_imports = false
